# secureelemakin

./: .gitmodules  serialsender.py  serialsendermenucreator.py  serialsenderotp.py  serialsenderpopup.py
linux/: CMakeLists.txt  Makefile  enc.cpp  enc.h  main.cpp  main_api.cpp  password.cpp  password.h  randrange.cpp  randrange.h  requirements.txt
linux/python_source/: mainwindow.ui  secureeditor.py  securestorage_sample  timeoutmanager.py
secureelemakin_leo/: autotyper.cpp  autotyper.h  button.cpp  button.h  charmenu.cpp  charmenu.h  enc.cpp  enc.h  readstringuntil.cpp  readstringuntil.h  securedata.cpp  securedata.h  securedata_sample.cpp  secureelemakin_leo.ino  test.cpp  test.h
secureelemakin_thumb/: 2fa.cpp  2fa.h  TOTPmkn.cpp  TOTPmkn.h  autotyper.cpp  autotyper.h  charmenu.cpp  enc.cpp  randrange.h  securedata.cpp  securedata.h  securedata_sample.cpp  sha1mkn.cpp  sha1mkn.h  softwaretime.cpp  softwaretime.h  test.cpp  test.h
securelemakin-dual/32u4/: 32u4.ino  Makefile
securelemakin-dual/32u4/src/: util_arraymalloc.h
securelemakin-dual/esp8266-cpp/: .gitignore  esp8266-cpp.ino  secret.h.example  securedataflash.cpp  securedataflash.h
securelemakin-dual/esp8266-cpp/src/: securelemakin-enc  util_arraymalloc.h
securelemakin-dual/esp8266-micropython/: .gitignore  Makefile  atmega32u4.py  boot.py  data-maker.py  data.py  data_manager.py  enc.py  libinstall.py  serialsender.py  totp.py  wificonnect.py
securelemakin-dual/esp8266-micropython/data/: full_to_separate.py  uploadall.py
securelemakin-enc/: enc.cpp  enc.h  randrange.cpp  randrange.h
securelemakin-enc/src/github_rweather_arduinolibs/: README.md
tools/: arduinomakefile  isprime.py  keygen.py
